--- a/task_7/css/style.css
+++ b/task_7/css/style.css
@@ -675,6 +675,7 @@ footer{
     height: 2rem;
     line-height: 2rem;
     font-size:0.8rem;
+    padding:0 1rem;
 }
 footer div a{
     float: right;
