--- a/task_8/style.css
+++ b/task_8/style.css
@@ -5,6 +5,13 @@ html,body{
     box-sizing: inherit;
 }
 
+/*-- our cleafix hack -- */
+.row:before,
+.row:after {
+    content:"";
+    display: table ;
+    clear:both;
+}
 .grid-container{
     width: 100%;
     max-width: 1200px;
