--- a/task_8/style.css
+++ b/task_8/style.css
@@ -14,15 +14,16 @@ html,body{
 }
 .grid-container{
     width: 100%;
-    max-width: 1200px;
+    margin: 0 auto;
+    padding: 10px;
 }
 
 [class*='col-'] {
     float: left;
     min-height: 1px;
-    width: 16.66%;
+    width: 8.33%;
     /*-- our gutter -- */
-    padding: 12px;
+    padding: 10px;
     /*background-color: #FFDCDC;*/
 }
 
@@ -60,11 +61,13 @@ html,body{
 
 /*-- some extra column content styling --*/
 [class*='col-'] > p {
-    background-color: #FFC2C2;
+    background-color: #eee;
     padding: 0;
     margin: 0;
     text-align: center;
     color: white;
     height:50px;
     line-height: 50px;
+    outline: 1px solid #999;
+    display: block;
 }
